--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-router": "^0.0.1",
+    "firebase": "^9.12.1",
     "nodemon": "^2.0.20",
     "path": "^0.12.7"
   }
