--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "express-router": "^0.0.1",
     "firebase": "^9.12.1",
