--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "dependencies": {
-    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "express-file-store": "^1.0.3",
-    "express-router": "^0.0.1",
     "express-session": "^1.17.3",
-    "firebase": "^9.12.1",
+    "firebase": "^9.13.0",
+    "firebase-admin": "^11.2.0",
+    "is-email": "^1.0.2",
+    "isemail": "^3.2.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
-    "path": "^0.12.7",
     "session-file-store": "^1.5.0"
   }
 }
