--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "cors": "^2.8.5",
+    "dateformat": "^3.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
@@ -10,6 +11,7 @@
     "isemail": "^3.2.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
-    "session-file-store": "^1.5.0"
+    "session-file-store": "^1.5.0",
+    "upgrade": "^1.1.0"
   }
 }
